封装一个曝光加载组件

--- a/package-exposure.html
+++ b/package-exposure.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>拉扯本页面的js</title>
+    <title>f封装一个曝光加载组件，能实现如下方式调用</title>
     <script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/1.9.1/jquery.js"></script>
 
     <style type="text/css">
