封装一个轮播

--- a/自己想起来默写一下/拉扯本页面的js.html
+++ b/自己想起来默写一下/拉扯本页面的js.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>拉扯本页面的js</title>
+    <title>曝光组件封装</title>
     <script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/1.9.1/jquery.js"></script>
 
     <style type="text/css">
